attempt to fix jumping food items on table in Safari

--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -173,32 +173,32 @@
     --itemEnd: -400deg;
   }
   
-  /* @-webkit-keyframes itemRotate {
-    0%    { -webkit-transform: rotateZ(var(--itemStart)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemStart)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    10%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    20%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    30%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    40%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    50%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    60%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    70%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    80%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    90%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    100%  { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-  } */
+  @-webkit-keyframes itemRotate {
+    0%    { -webkit-transform: rotateZ(var(--itemStart)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    10%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    20%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    30%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    40%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    50%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    60%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    70%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    80%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    90%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    100%  { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+  }
   
   @keyframes itemRotate {
-    0%    { -webkit-transform: rotateZ(var(--itemStart)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemStart)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    10%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    20%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    30%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    40%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    50%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    60%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    70%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    80%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    90%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
-    100%  { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    0%    { -webkit-transform: rotateZ(var(--itemStart)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    10%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    20%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    30%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    40%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    50%   { -webkit-transform: rotateZ(var(--itemMid)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    60%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    70%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    80%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    90%   { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
+    100%  { -webkit-transform: rotateZ(var(--itemEnd)) translateZ(160px) rotateX(-90deg) rotateY(90deg); }
   }
   
   
